[CAMEL-16379] Support for JDK 16